PR#39332: fix for segfault problem with mod_cgid on Solaris Patch by Masaoki Kobayashi

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@729579 13f79535-47bb-0310-9956-ffa450edef68